amber docker works

--- a/amber/Dockerfile
+++ b/amber/Dockerfile
@@ -1,12 +1,16 @@
-FROM linuxbrew/linuxbrew
+FROM lachele/ambertools:16u15
 
-#RUN sudo apt-get install -y libssl-dev openssl bzip2
-RUN sudo apt-get install -y python3 python3-pip
-RUN python3 -m pip install --user virtualenv
+#COPY activate.sh /activate.sh
+
+RUN echo "source /usr/local/amber16/amber.sh" > /root/.bashrc
 
 
-#RUN 'export PATH="/home/linuxbrew/.linuxbrew/opt/python/libexec/bin:$PATH"' >> /home/linuxbrew/.bashrc
-#RUN 'export PYTHONPATH=/home/linuxbrew/.linuxbrew/lib/python2.7/site-packages:$PYTHONPATH' >> /home/linuxbrew/.bashrc
-#RUN 'export PYTHONPATH=/home/linuxbrew/.linuxbrew/lib/python3.5/site-packages:$PYTHONPATH' >> /home/linuxbrew/.bashrc
 
-RUN brew install amber 
+
+
+
+
+
+
+
+
