added charmm, installed pip2 on gmx and amber

--- a/amber/Dockerfile
+++ b/amber/Dockerfile
@@ -1,6 +1,8 @@
 FROM lachele/ambertools:16u15
 
 #COPY activate.sh /activate.sh
+apt-get update
+apt-get install python-pip
 
 RUN echo "source /usr/local/amber16/amber.sh" > /root/.bashrc
 
