--- a/gromacs/Dockerfile
+++ b/gromacs/Dockerfile
@@ -5,6 +5,7 @@ FROM linuxbrew/linuxbrew:1.4.3
 RUN sudo apt-get update
 RUN sudo apt-get install -y python3 python3-pip
 RUN python3 -m pip install --user virtualenv
+RUN sudo apt-get install -y python-pip
 
 
 #RUN 'export PATH="/home/linuxbrew/.linuxbrew/opt/python/libexec/bin:$PATH"' >> /home/linuxbrew/.bashrc
