charmm: install pip2 pip3 + find charmm executable

--- a/charmm/Dockerfile
+++ b/charmm/Dockerfile
@@ -1,1 +1,6 @@
 FROM jchodera/charmm-lite:c40b1
+
+RUN sudo apt-get update
+RUN sudo apt-get install -y python-pip python3-pip
+
+RUN echo "export PATH=/charmm/c40b1_gnu/exec/gnu:$PATH" > /root/.bashrc
