--- a/amber/Dockerfile
+++ b/amber/Dockerfile
@@ -1,8 +1,7 @@
 FROM lachele/ambertools:16u15
 
-#COPY activate.sh /activate.sh
-apt-get update
-apt-get install python-pip
+RUN apt-get update
+RUN apt-get install -y python-dev python-pip
 
 RUN echo "source /usr/local/amber16/amber.sh" > /root/.bashrc
 
