--- a/amber/Dockerfile
+++ b/amber/Dockerfile
@@ -2,6 +2,7 @@ FROM lachele/ambertools:16u15
 
 RUN apt-get update
 RUN apt-get install -y python-dev python-pip
+RUN apt-get install -y openbabel
 
 RUN echo "source /usr/local/amber16/amber.sh" > /root/.bashrc
 
