--- a/gromacs/Dockerfile
+++ b/gromacs/Dockerfile
@@ -6,10 +6,8 @@ RUN sudo apt-get update
 RUN sudo apt-get install -y python3 python3-pip
 RUN python3 -m pip install --user virtualenv
 RUN sudo apt-get install -y python-pip
+RUN sudo apt-get install -y openbabel
 
-
-#RUN 'export PATH="/home/linuxbrew/.linuxbrew/opt/python/libexec/bin:$PATH"' >> /home/linuxbrew/.bashrc
-#RUN 'export PYTHONPATH=/home/linuxbrew/.linuxbrew/lib/python2.7/site-packages:$PYTHONPATH' >> /home/linuxbrew/.bashrc
-#RUN 'export PYTHONPATH=/home/linuxbrew/.linuxbrew/lib/python3.5/site-packages:$PYTHONPATH' >> /home/linuxbrew/.bashrc
+RUN echo "export PATH=/home/linuxbrew/.local/bin:$PATH" > $HOME/.bashrc
 
 RUN brew install gromacs
