Force pymol to use system python to avoid clashes with tox's virtualenv

--- a/amber/Dockerfile
+++ b/amber/Dockerfile
@@ -6,8 +6,7 @@ RUN apt-get install -y openbabel pymol
 
 RUN echo "source /usr/local/amber16/amber.sh" > /root/.bashrc
 
-
-
+RUN sed -i "s,python2.7,/usr/bin/python2.7,g" /usr/bin/pymol
 
 
 
