allow interactive mode for docker containers fixes in Dockerfiles: use /etc/bash.bashrc instead of /root/.bashrc

--- a/charmm/Dockerfile
+++ b/charmm/Dockerfile
@@ -16,6 +16,6 @@ RUN ./configure
 RUN sudo make install
 
 
-RUN echo "export PATH=/charmm/c40b1_gnu/exec/gnu:$PATH" > /root/.bashrc
+RUN echo "export PATH=/charmm/c40b1_gnu/exec/gnu:$PATH" >> /etc/bash.bashrc
 
 RUN sed -i "s,python2.7,/usr/bin/python2.7,g" /usr/bin/pymol
